<resources>
    <string name="app_name">测试</string>

    <string name="crash">出问题了~</string>

    <!--tab-->
    <string name="favo">常购</string>
    <string name="provider">供货商</string>
    <string name="shop_cart">购物车</string>
    <string name="myself">我的</string>
    <string name="category">分类</string>

    <!--user-->
    <string name="not_login">未登录</string>
    <string name="login">登录/注册</string>
    <string name="go_login">登录</string>
    <string name="register">注册</string>
    <string name="phone">手机:</string>
    <string name="password">密码:</string>
    <string name="input_phone">请输入您的手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="fast_checkin">快速注册</string>
    <string name="forget_password">找回密码</string>
    <string name="confirm">确认</string>
    <string name="input_correct_pass_phone_hit">请输入手机号和密码</string>
    <string name="get_check_num">获取验证码</string>
    <string name="check_num_hit">请输入验证码</string>
    <string name="register_pass_hint">请输入六位以上数字或字母</string>
    <string name="confirm_register_pass_hint">请输入六位以上数字或字母</string>
    <string name="invite_num_hint">销售人员给您提供的注册凭证</string>
    <string name="check_num">验证码:</string>
    <string name="confirm_pass">确认密码:</string>
    <string name="invite_num">邀请码:</string>
    <string name="change_password">修改密码</string>
    <string name="old_password">旧密码：</string>
    <string name="new_password">新密码：</string>
    <string name="confirm_new_password">确认新密码：</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="quit">退出登录</string>
    <string name="find_pwd_again">请重新发送手机号</string>
    <string name="input_again">输入有误，请重新输入</string>
    <string name="pls_login">请先登录</string>
    <string name="login_pending">登录中</string>
    <string name="register_pending">注册中</string>
    <string name="login_again">登录失败，请重试</string>

    <!--provider-->
    <string name="add">添加</string>
    <string name="added">已添加</string>
    <string name="add_provider">添加供货商</string>
    <string name="search_provider_hint">请输入供货商名字</string>
    <string name="search">搜索：  </string>
    <string name="delete_provider">删除供货商？</string>
    <string name="provider_detail">供货商详情</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="id">ID： </string>
    <string name="name">用户名： </string>
    <string name="mobile_phone">手机： </string>
    <string name="goods_detail">商品详情</string>
    <string name="goods_list">商品列表</string>
    <string name="goods_cat">商品种类</string>
    <string name="provider_icon">供货</string>
    <string name="search_provider_no_result">没找到任何供货商</string>
    <string name="search_pending">搜索中</string>

    <string name="goods_item_detail">商品详情</string>

    <!--shop cart-->
    <string name="total">合计：</string>
    <string name="next">下一步</string>
    <string name="go_shoppping">去逛逛</string>
    <string name="add_cart_fast">快速加入购物车</string>
    <string name="clear_cart">清空</string>
    <string name="add_shop_cart">加入购物车</string>
    <string name="already_at_shopcart">已在购物车</string>
    <string name="succeed_add_shop_cart">成功加入购物车</string>
    <string name="delete_goods_from_cart">删除商品?</string>
    <string name="go_back">返回</string>
    <string name="modify">修改</string>
    <string name="input_number">输入数量：</string>
    <string name="select_number">选择商品数量</string>
    <string name="pic_only_for_reference">图片仅供参考，请以实物为准</string>
    <string name="specific">规格：</string>
    <string name="modify_after_add_shopcart">请加入到购物车再修改商品数量</string>

    <!--order-->
    <string name="order_confirm">订单确认</string>
    <string name="order_num">订单数目：</string>
    <string name="count">数量：</string>
    <string name="order_list">订单列表</string>
    <string name="all_order">全部订单</string>
    <string name="pending_order">处理中订单</string>
    <string name="completed_order">完成订单</string>
    <string name="order_index">订单号：</string>
    <string name="shop_name">店铺：</string>
    <string name="order_total_price">总金额：</string>
    <string name="goods_num">商品数目：</string>
    <string name="order_start_time">下单时间：</string>
    <string name="order_state_create">已创建</string>
    <string name="order_state_canceled">已取消</string>
    <string name="order_state_pending">处理中</string>
    <string name="order_state_accepted">已接单</string>
    <string name="order_state_completed">已完成</string>
    <string name="order_state_denied">拒绝接单</string>
    <string name="order_detail">订单详情</string>
    <string name="order_goods_name">名称</string>
    <string name="order_goods_unit_price">单价</string>
    <string name="order_goods_count">定量</string>
    <string name="order_goods_actual_count">实量</string>
    <string name="order_goods_item_total">小计</string>
    <string name="order_goods_total_price">总价</string>
    <string name="make_order_again">再次下单</string>
    <string name="fail_to_cancel">取消订单失败</string>
    <string name="processing">处理中</string>
    <string name="order_commit_success">订单提交成功</string>
    <string name="order_commit_fail">订单提交失败</string>
    <string name="goods_under_carriage">已下架</string>
    <string name="delete">删除</string>

    <!--myself-->
    <string name="order">订单</string>
    <string name="restaurant_manager">店铺管理</string>
    <string name="user_profile">用户资料</string>
    <string name="setting">设置</string>
    <string name="about_us">关于我们</string>
    <string name="update">检查更新</string>

    <!--用户信息-->
    <string name="complete_user_profile">完善用户信息</string>
    <string name="user_name">姓名：</string>
    <string name="user_sex">性别：</string>
    <string name="user_contact_addr">联系：</string>
    <string name="user_title">职位：</string>
    <string name="save">确认修改</string>

    <!--店铺管理-->
    <string name="shop_mgr_name2">店铺名：</string>
    <string name="shop_mgr_audited">审核通过</string>
    <string name="shop_mgr_addr">地址：</string>
    <string name="shop_mgr_owner">负责人：</string>
    <string name="shop_mgr_phone">联系电话：</string>
    <string name="shop_mgr_best_sent_time">最佳配送时间：</string>
    <string name="shop_mgr_modify">修改</string>

    <string name="update_already_is_latest_ver">已经是最新版本</string>

    <string name="loading">加载中...</string>
    <string name="no_more_data">没有更多数据</string>
    <string name="load_more">加载更多</string>
    <string name="try_load_again">重新加载</string>
    <string name="network_unavailable">网络不可用</string>

</resources>
