<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/order_item"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <View
        android:background="@color/div"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <LinearLayout
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

    <TextView
            android:text="@string/order_goods_name"
            android:gravity="start|center_vertical"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/order_goods_count"
            android:gravity="center"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/order_goods_actual_count"
            android:gravity="center"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/order_goods_unit_price"
            android:gravity="center"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:text="@string/order_goods_item_total"
            android:gravity="center_vertical|end"
            android:layout_weight="0.15"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>