<?xml version="1.0" encoding="utf-8"?>
<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_footer"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/load_more"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:text="@string/loading"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:text="@string/no_more_data"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
</ViewAnimator>