<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/next_container"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_next_height">

    <TextView
        android:id="@+id/total"
        android:gravity="center"
        android:text="@string/total"
        android:layout_marginLeft="18dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/total_value"
        android:gravity="center"
        android:layout_marginLeft="12dp"
        android:layout_toRightOf="@id/total"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/next_btn"
        android:text="@string/next"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:layout_width="90dp"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/clear_btn"
        android:text="@string/clear_cart"
        android:clickable="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layout_toLeftOf="@id/next_btn"
        android:layout_marginRight="8dp"
        android:layout_width="90dp"
        android:layout_height="match_parent" />

</RelativeLayout>