<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/login_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/phone"
        android:layout_marginTop="8dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/phone_tv"
            android:text="@string/phone"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <EditText
            style="@style/MyEditviewApperance"
            android:inputType="number"
            android:hint="@string/input_phone"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/cancel_pass"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_cancel_black_24dp"
            android:layout_width="@dimen/cancel_btn_size"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:id="@+id/div3"
        android:background="@color/unlogin_text_color"
        android:layout_width="match_parent"
        android:layout_height="1px"/>

    <Button
        android:id="@+id/go_login"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/confirm"
        android:background="@drawable/login_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>